Added run tests to the CI job

--- a/.github/workflows/build_library.yml
+++ b/.github/workflows/build_library.yml
@@ -17,3 +17,5 @@ jobs:
       run: make samples
     - name: Build Tests
       run: make tests
+    - name: Running Tests
+      run: sh run_tests.sh
