CMake: Added Rules for build samples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,19 @@ include(ConfigureBaseTargets)
 include(CheckPlatform)
 
 # Designar Library
+file(GLOB DESIGNAR_SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
 add_library(Designar STATIC)
 target_include_directories(Designar PUBLIC "${PROJECT_SOURCE_DIR}/include")
-
-# Collect the sources
-file(GLOB DESIGNAR_SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
-
 target_link_libraries(Designar PUBLIC designar-warning-interface)
 target_sources(Designar PUBLIC ${DESIGNAR_SOURCES})
 
+# Samples
+find_package(Threads REQUIRED)
+
+file(GLOB DESIGNAR_SAMPLES_SOURCES "${PROJECT_SOURCE_DIR}/samples/src/*.cpp")
+foreach(samplefile ${DESIGNAR_SAMPLES_SOURCES})
+  get_filename_component(samplename ${samplefile} NAME_WE)
+  add_executable(${samplename} ${samplefile})
+  target_link_libraries(${samplename} PRIVATE Threads::Threads)
+  target_link_libraries(${samplename} PUBLIC Designar)
+endforeach(samplefile ${DESIGNAR_SAMPLES_SOURCES})
