CMake: Added Samples and Tests files to build process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,23 +13,44 @@ list(APPEND CMAKE_MODULE_PATH
   "${CMAKE_SOURCE_DIR}/cmake/macros")
 
 # Import cmake options
+include(CTest)
 include(ConfigureBaseTargets)
 include(CheckPlatform)
 
 # Designar Library
 file(GLOB DESIGNAR_SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
-add_library(Designar STATIC)
+add_library(Designar STATIC ${DESIGNAR_SOURCES})
 target_include_directories(Designar PUBLIC "${PROJECT_SOURCE_DIR}/include")
 target_link_libraries(Designar PUBLIC designar-warning-interface)
-target_sources(Designar PUBLIC ${DESIGNAR_SOURCES})
 
-# Samples
 find_package(Threads REQUIRED)
 
+# Designar Samples
 file(GLOB DESIGNAR_SAMPLES_SOURCES "${PROJECT_SOURCE_DIR}/samples/src/*.cpp")
 foreach(samplefile ${DESIGNAR_SAMPLES_SOURCES})
   get_filename_component(samplename ${samplefile} NAME_WE)
   add_executable(${samplename} ${samplefile})
-  target_link_libraries(${samplename} PRIVATE Threads::Threads)
-  target_link_libraries(${samplename} PUBLIC Designar)
+  target_link_libraries(${samplename}
+    PUBLIC
+      Designar
+      Threads::Threads
+  )
 endforeach(samplefile ${DESIGNAR_SAMPLES_SOURCES})
+
+# Designar Tests
+file(GLOB DESIGNAR_TESTS_SOURCES "${PROJECT_SOURCE_DIR}/tests/src/*.cpp")
+foreach(testfile ${DESIGNAR_TESTS_SOURCES})
+  get_filename_component(testname ${testfile} NAME_WE)
+  add_executable(${testname} ${testfile})
+  target_link_libraries(${testname}
+    PUBLIC
+      Designar
+      Threads::Threads
+  )
+  add_test(
+    NAME
+      ${testname}
+    COMMAND
+      ${testname}
+  )
+endforeach(testfile ${DESIGNAR_TESTS_SOURCES})
