--- a/.github/workflows/build_library.yml
+++ b/.github/workflows/build_library.yml
@@ -3,14 +3,26 @@ name: C/C++ CI
 on: [push, pull_request]
 
 jobs:
-  build_with_clang:
-    name: Build with Clang
+  build_with_clang_linux:
+    name: Build with clang Linux
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Run Cmake
       run: 
         mkdir build && cd build && cmake -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang ../
+    - name: Build Library
+      run: cd build && make all
+    - name: Run tests
+      run: cd build && make test
+  build_with_gcc_linux:
+    name: Build with gcc Linux
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Run Cmake
+      run: 
+        mkdir build && cd build && cmake -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc ../
     - name: Build Library
       run: cd build && make all
     - name: Run tests
